discussion/kv_engine/155544/155544_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46827: Introduce KVBucket::hasCapacityInCheckpoints()

Used at VBucket add/set, same as where we verify our existing memory
conditions.
Currently the checkpoint_memory_ratio is set to 1.0 in configuration,
so the memory behaviour of the system stays logically unchanged.

Change-Id: I29368cdee147fe6421398a75aff25f47e00725ca

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-07-14 09:30:28.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-14 09:43:37.000000000
Message: 
Patch Set 5: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37674/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37674/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12620/ : ABORTED

Failure of GoogleTest "TransportProtocols/GetSetTest.ServerDetectsJSONCompressed/McbpSsl_XattrYes_JsonYes_SnappyYes":

<pre>
[ RUN      ] TransportProtocols/GetSetTest.ServerDetectsJSONCompressed/McbpSsl_XattrYes_JsonYes_SnappyYes
[2021-07-14T09:43:32.138Z] unknown file: Failure
[2021-07-14T09:43:32.138Z] C++ exception with description "EOF: Connection reset by peer" thrown in SetUp().
[2021-07-14T09:43:32.138Z] [  FAILED  ] TransportProtocols/GetSetTest.ServerDetectsJSONCompressed/McbpSsl_XattrYes_JsonYes_SnappyYes, where GetParam() = (McbpSsl, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>) (54 ms)
TransportProtocols/GetSetTest.ServerDetectsJSONCompressed/McbpSsl_XattrYes_JsonYes_SnappyYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12620/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12620/ )

ThreadSanitizer issue: data race on vptr (ctor/dtor vs virtual call) /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/platform/src/process_monitor.cc:93 in ProcessMonitorImpl::~ProcessMonitorImpl()  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12620/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/117/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11199/ : ABORTED

Failure of GoogleTest "EphemeralOrPersistent/STParameterizedBucketTest.CheckpointMemThresholdEnforced/persistent_full_eviction":

<pre>
[ RUN      ] EphemeralOrPersistent/STParameterizedBucketTest.CheckpointMemThresholdEnforced/persistent_full_eviction
[2021-07-14T09:43:11.775Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:4317: Failure
[2021-07-14T09:43:11.775Z] Expected equality of these values:
[2021-07-14T09:43:11.775Z]   numItems - 1
[2021-07-14T09:43:11.775Z]     Which is: 72
[2021-07-14T09:43:11.775Z]   store->getVBucket(vbid)->getNumItems()
[2021-07-14T09:43:11.775Z]     Which is: 0
[2021-07-14T09:43:11.775Z] [  FAILED  ] EphemeralOrPersistent/STParameterizedBucketTest.CheckpointMemThresholdEnforced/persistent_full_eviction, where GetParam() = ("persistent", "full_eviction") (50 ms)
EphemeralOrPersistent/STParameterizedBucketTest.CheckpointMemThresholdEnforced/persistent_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11199/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11199/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10534/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.cc:3297:26: error: member access into incomplete type "KVBucket" [clang-diagnostic-error]
    if (bucket && !bucket->hasCapacityInCheckpoints()) {
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.h:49:7: note: forward declaration of "KVBucket"
class KVBucket;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.cc:3448:26: error: member access into incomplete type "KVBucket" [clang-diagnostic-error]
    if (bucket && !bucket->hasCapacityInCheckpoints()) {
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.h:49:7: note: forward declaration of "KVBucket"
class KVBucket;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10534/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.cc:3297:26:
error: member access into incomplete type "KVBucket" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10534/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32134/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/vbucket.cc:3297:26:
error: member access into incomplete type "KVBucket"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32134/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/146/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">1 warnings</a> found. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/146/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12113/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STParameterizedBucketTest.CheckpointMemThresholdEnforced/persistent_full_eviction":

<pre>
[ RUN      ] EphemeralOrPersistent/STParameterizedBucketTest.CheckpointMemThresholdEnforced/persistent_full_eviction
[2021-07-14T09:37:02.682Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:4317: Failure
[2021-07-14T09:37:02.682Z] Expected equality of these values:
[2021-07-14T09:37:02.682Z]   numItems - 1
[2021-07-14T09:37:02.682Z]     Which is: 72
[2021-07-14T09:37:02.682Z]   store->getVBucket(vbid)->getNumItems()
[2021-07-14T09:37:02.682Z]     Which is: 0
[2021-07-14T09:37:02.682Z] [  FAILED  ] EphemeralOrPersistent/STParameterizedBucketTest.CheckpointMemThresholdEnforced/persistent_full_eviction, where GetParam() = ("persistent", "full_eviction") (60 ms)
EphemeralOrPersistent/STParameterizedBucketTest.CheckpointMemThresholdEnforced/persistent_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12113/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20166/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STParameterizedBucketTest.CheckpointMemThresholdEnforced/persistent_full_eviction":

<pre>
[ RUN      ] EphemeralOrPersistent/STParameterizedBucketTest.CheckpointMemThresholdEnforced/persistent_full_eviction
[2021-07-14T09:40:02.452Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:4317: Failure
[2021-07-14T09:40:02.452Z] Expected equality of these values:
[2021-07-14T09:40:02.452Z]   numItems - 1
[2021-07-14T09:40:02.452Z]     Which is: 92
[2021-07-14T09:40:02.452Z]   store->getVBucket(vbid)->getNumItems()
[2021-07-14T09:40:02.452Z]     Which is: 0
[2021-07-14T09:40:02.452Z] [  FAILED  ] EphemeralOrPersistent/STParameterizedBucketTest.CheckpointMemThresholdEnforced/persistent_full_eviction, where GetParam() = ("persistent", "full_eviction") (302 ms)
EphemeralOrPersistent/STParameterizedBucketTest.CheckpointMemThresholdEnforced/persistent_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20166/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20166/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12280/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STParameterizedBucketTest.CheckpointMemThresholdEnforced/persistent_full_eviction":

<pre>
[ RUN      ] EphemeralOrPersistent/STParameterizedBucketTest.CheckpointMemThresholdEnforced/persistent_full_eviction
[2021-07-14T09:39:19.428Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:4317: Failure
[2021-07-14T09:39:19.428Z] Expected equality of these values:
[2021-07-14T09:39:19.428Z]   numItems - 1
[2021-07-14T09:39:19.429Z]     Which is: 72
[2021-07-14T09:39:19.429Z]   store->getVBucket(vbid)->getNumItems()
[2021-07-14T09:39:19.429Z]     Which is: 0
[2021-07-14T09:39:19.429Z] [  FAILED  ] EphemeralOrPersistent/STParameterizedBucketTest.CheckpointMemThresholdEnforced/persistent_full_eviction, where GetParam() = ("persistent", "full_eviction") (77 ms)
EphemeralOrPersistent/STParameterizedBucketTest.CheckpointMemThresholdEnforced/persistent_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12280/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9181/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
